# o

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: category.rs  cli.rs  cmd.rs  config.rs  exit.rs  main.rs
