[package]
name = "o"
version = "0.1.0"
edition = "2021"

authors = ["Laura Powles <laura@laurapowles.com>"]
description = "Configurable file finder and opener"
repository = "https://github.com/nebulaeandstars/o"

[profile.release]
opt-level = "s"
lto = true
debug = false
codegen-units = 1
panic = "abort"

[dependencies]
getopts = "0.2"
atty = "0.2"
