[package]
name = "o"
version = "0.1.0"
authors = ["Laura Powles <laura@laurapowles.com>"]
edition = "2021"

license-file = "LICENSE"
description = "Configurable file finder and opener"
repository = "https://github.com/nebulaeandstars/o"

[profile.release]
opt-level = "s"
lto = true
debug = false
codegen-units = 1
panic = "abort"

[dependencies]
getopts = "0.2"
atty = "0.2"
dirs = "4.0"
serde_yaml = "0.8"
serde= {version = "1.0", features = ["derive"]}
